<resources>
    <string name="app_name">My Application</string>
    <string name="activity_name">My Activity</string>
    <string name="input">please input your name</string>
    <string name="login_button">登录</string>
    <string name="reset_button">重置</string>
    <string name="register_button">注册</string>
    <string name="mbutton1">按钮一</string>
    <string name="mbutton2">按钮二</string>
    <string name="mbutton3">按钮三</string>
    <string name="user_name">用户名：</string>
    <string name="pass_word">密码：</string>
    <string name="red">红色</string>
    <string name="green">绿色</string>
    <string name="blue">蓝色</string>
    <string name="flag_list_name">片段</string>
    <string name="button_home">主页</string>
    <string name="button_setting">设置</string>
    <string name="button_user">我的</string>
</resources>
